fix sort btn not showing on entries & improve disabled state

--- a/styles/_better-sheet.scss
+++ b/styles/_better-sheet.scss
@@ -23,6 +23,10 @@
         font-size: 0.8em;
     }
 
+    .with-sort-btn.disabled {
+        opacity: 0.4;
+    }
+
     .flexible-available {
         flex: 1;
         text-align: end;
